# Craft

./: .gitignore
Sources/: CMakeLists.txt  main.cpp
Sources/Source/: Application.cpp  Application.h  Camera.cpp  Camera.h  Config.h  Context.cpp  Context.h  Entity.h  Mesh.h  Model.cpp  Model.h
Sources/Source/GL/: GLFunctions.cpp  GLFunctions.h
Sources/Source/Maths/: Matrix.cpp  Matrix.h  NoiseGenerator.cpp  NoiseGenerator.h  Ray.cpp  Ray.h  Vector2XZ.cpp  Vector2XZ.h  glm.h
Sources/Source/Physics/: AABB.h
Sources/Source/Player/: Player.cpp  Player.h
Sources/Source/Renderer/: ChunkRenderer.cpp  ChunkRenderer.h  CubeRenderer.cpp  CubeRenderer.h  GUIRenderer.cpp  GUIRenderer.h  QuadRenderer.cpp  QuadRenderer.h  RenderMaster.cpp  RenderMaster.h  SkyboxRenderer.cpp  SkyboxRenderer.h
Sources/Source/Shaders/: BasicShader.cpp  BasicShader.h  ChunkShader.cpp  ChunkShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  SkyboxShader.cpp  SkyboxShader.h
Sources/Source/States/: PlayingState.cpp  PlayingState.h  StateBase.h
Sources/Source/Texture/: BasicTexture.cpp  BasicTexture.h  CubeTexture.cpp  CubeTexture.h  TextureAtlas.cpp  TextureAtlas.h
Sources/Source/Util/: Array2D.h  FileUtil.cpp  FileUtil.h  NonCopyable.h  NonMovable.h  Random.cpp  Random.h  Singleton.h
Sources/Source/World/: World.cpp  World.h  WorldConstants.h
Sources/Source/World/Block/: BlockData.cpp  BlockData.h  BlockDatabase.cpp  BlockDatabase.h  BlockId.h  ChunkBlock.cpp  ChunkBlock.h
Sources/Source/World/Chunk/: Chunk.cpp  Chunk.h  IChunk.h  (+8 more)
Sources/Source/glad/: glad.c  glad.h
(+4 files in other folders)
